--- a/templates/home.html
+++ b/templates/home.html
@@ -44,7 +44,7 @@
     <body>
         <div id="container">
         <h1 style="text-align: center; font-size: 50px;">Microsoft Job Portal</h1>
-        <img id="banner"  src ="http://192.168.29.222:5000/static/banner.jpg" height="360" width="98%">
+        <img id="banner"  src ="static\banner.jpg" height="360" width="98%" alt="banner">
         <h2 style="text-align: center;">About Microsoft</h2>
         <p style="font-size: 20px;">
           
