Function button Links

--- a/templates/home.html
+++ b/templates/home.html
@@ -69,7 +69,7 @@
             {%endfor%}
         </div>
         <div style="text-align: center; padding-top: 10px;">
-            <button class="btn btn-primary btn-lg mb-4">Contact Us</button>
+            <a href="mailto:microsoft.contact@example.com?subject=%3CContact%20Reason%3E&body=Name%3A%20%3CEnter%20your%20Name%3E%0D%0A" class="btn btn-primary btn-lg mb-4">Contact Us</a>
             {% include 'footer.html' %}
             
         </div>
