--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,11 +1,11 @@
 <div class="container">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+        <li class="nav-item"><a target="_blank" href="https://harsh-job-portal/home" class="nav-link px-2 text-body-secondary">Home</a></li>
+        <li class="nav-item"><a target="_blank" href="https://harsh-job-portal/Features" class="nav-link px-2 text-body-secondary">Features</a></li>
+        <li class="nav-item"><a target="_blank" href="https://harsh-job-portal/jobs" class="nav-link px-2 text-body-secondary">Jobs</a></li>
+        <li class="nav-item"><a target="_blank" href="https://harsh-job-portal/Events" class="nav-link px-2 text-body-secondary">Events</a></li>
+        <li class="nav-item"><a target="_blank" href="https://harsh-job-portal/About" class="nav-link px-2 text-body-secondary">About</a></li>
       </ul>
       <p class="text-center text-body-secondary">&copy; 2024 Microsoft, Inc</p>
       <p>Copywrite 2024, Harsh</p>
