--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Job Portal</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    {% include 'bootstrap.html' %}
+    <title>Job Portal</title>
   <style>
     h1{
         font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -43,9 +40,8 @@
 
     <body>
         {% include 'nav.html' %}
-        <div id="container">
-        <h1 style="text-align: center; font-size: 50px;">Microsoft Job Portal</h1>
-        <img id="banner"  src ="static\banner.jpg" height="360" width="98%" alt="banner">
+        {% include 'banner.html' %}
+        <div id="container">    
         <h2 style="text-align: center; padding-top: 20px; padding-bottom: 20px; ">About Microsoft</h2>
         <div class="row">
             <div class="col-6">
