--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="col-3">
-    <a href="mailto:microsoft@example.com?subject=Application%20for%20{{job['title']}}&body=Name%3A%20%3CEnter%20your%20Name%3E%0D%0AResume%20Link%3A%20%3CPaste%20your%20Link%3E%0D%0ALinkedIn%3A%20%3CLinkedIn%20URL%3E%0D%0APortfolio%3A%20%3CYour%20Portfoilo%20link%3E%0D%0A" type="button" class="btn btn-outline-success">Apply</a>
+    <a href="/jobs/{{job['id']}}" type="button" class="btn btn-outline-success">Apply</a>
     
 </div>
 </div>
