added dynamic pages

--- a/templates/jobpage.html
+++ b/templates/jobpage.html
@@ -7,16 +7,28 @@
 <body>
     {% include 'nav.html' %}
     {% include 'banner.html' %}
+    <div id="container" style="max-width: 720px; margin:auto;">
     <h3>Title</h3>
     <p>{{job.title}}</p>
     <h3>Location</h3>
     <p>{{job.location}}</p>
-    <h3>Salary</h3>
-    <p>{{job.currency}},{{job.salary}}</p>
     <h3>Responsbility</h3>
-    <p>{{job.responsbility}}</p>
+    <ul>
+    {% for line in job.responsbility.split(".") %}
+    <li>{{line}}</li>
+    {% endfor %}
+</ul>
+    
     <h3>Requirement</h3>
-    <p>{{job.requirements}}</p>
+    <ol>
+        {% for line in job.requirements.split(".") %}
+        <li>{{line}}</li>
+        {% endfor %}
+    </ol>
+    
+    <h3>Salary</h3>
+    <p>{{job.currency}}. {{job.salary}}</p>
+    </div>
     {% include 'footer.html' %}
     
 </body>
