--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar shadow-lg sticky-top bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
         <img src="static\Microsoft_logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         Microsoft
       </a>
