submiited data to Db

--- a/templates/jobpage.html
+++ b/templates/jobpage.html
@@ -28,7 +28,9 @@
     
     <h3>Salary</h3>
     <p>{{job.currency}}. {{job.salary}}</p>
+    {% include 'Application_form.html' %}
     </div>
+    
     {% include 'footer.html' %}
     
 </body>
