--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,6 +8,6 @@
         <li class="nav-item"><a target="_blank" href="https://harsh-job-portal/About" class="nav-link px-2 text-body-secondary">About</a></li>
       </ul>
       <p class="text-center text-body-secondary">&copy; 2024 Microsoft, Inc</p>
-      <p>Copywrite 2024, Harsh</p>
+      <p>&copy; 2024, Harsh</p>
     </footer>
   </div>
